force-app/main/default/objects/Global_Configuration__mdt/Global_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Master table of config flags for use in code.</description>
    <label>Global Configuration</label>
    <pluralLabel>Global Configurations</pluralLabel>
</CustomObject>