force-app/main/default/objects/Global_Configuration__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the value.</description>
    <inlineHelpText>Describe the value and where it&apos;s used.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>