force-app/main/default/objects/Global_Configuration__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The Name of the item to be retrieved from code.</description>
    <inlineHelpText>The Name of the item to be retrieved from code.</inlineHelpText>
    <label>Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>