force-app/main/default/objects/Global_Configuration__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The configuration value. Stored as a string. Code should cast to preferred type if necessary.</description>
    <inlineHelpText>The configuration value. Stored as a string. Code should cast to preferred type if necessary.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>